# games101

./: .gitignore  readme.md
0_Assignment/Code/: main.cpp
1_Assignment/Code/: CMakeLists.txt  main.cpp  rasterizer.cpp
2_Assignment/Code/: CMakeLists.txt  main.cpp  rasterizer.cpp  rasterizer.hpp
3_Assignment/Code/: CMakeLists.txt  Texture.hpp  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
4_Assignment/code/: main.cpp
5_Assignment/: readme.md
5_Assignment/Code/: Renderer.cpp  Sphere.hpp  Triangle.hpp  Vector.hpp
6_Assignment/PA6/: readme.md
6_Assignment/PA6/Assignment6/: BVH.cpp  BVH.hpp  Bounds3.hpp  Intersection.hpp  OBJ_Loader.hpp  Renderer.cpp  Triangle.hpp
7_Assignment/PA7/: readme.md
7_Assignment/PA7/Assignment7/: BVH.cpp  Bounds3.hpp  CMakeLists.txt  Material.hpp  Renderer.cpp  Scene.cpp  Triangle.hpp  global.hpp  main.cpp
